Fri Mar  5 15:18:50 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/CoherentUpdater/Base/CoherentUpdate_Test_Base.idl:
        * connectors/dds4ccm/tests/CoherentUpdater/Connector/CoherentUpdate_Test_Connector.mpc:
        * connectors/dds4ccm/tests/CoherentUpdater/Receiver/CoherentUpdate_Test_Receiver.mpc:
        * connectors/dds4ccm/tests/CoherentUpdater/Sender/CoherentUpdate_Test_Sender.mpc:
        * connectors/dds4ccm/tests/CoherentUpdater/descriptors/Plan.cdp:
          Resolved fuzz errors.

Fri Mar  5 14:41:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          Fixed invalid path

Fri Mar  5 13:18:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * cmm/CCM_lem_stub.mpc:
          Only generate the stub export with one idl file

Fri Mar  5 13:04:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/RTIDDS_DDS4CCM_CIAO.mwc:
        * connectors/dds4ccm/NDDS_DDS4CCM_CIAO.mwc:
          Renamed

Fri Mar  5 12:27:09 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/dds4ccm_impl.mpc:
        * connectors/dds4ccm/impl/dds/dds_impl.mpc:
          Renamed.

        * connectors/dds4ccm/impl/dds/ndds/DDS4CCM_Traits.h:
          Renamed RTI namespace to NDDS namespace.

Fri Mar  5 12:16:58 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * MPC/config/dds4ccm_impl.mpb:
        * connectors/dds4ccm/impl/dds/Coherent_Changes_Guard.h:
        * connectors/dds4ccm/impl/dds/ContentFilteredTopic.h:
        * connectors/dds4ccm/impl/dds/DDSCallbackStatusHandler.h:
        * connectors/dds4ccm/impl/dds/DataReader.h:
        * connectors/dds4ccm/impl/dds/DataReaderListener.h:
        * connectors/dds4ccm/impl/dds/DataWriter.h:
        * connectors/dds4ccm/impl/dds/DataWriterListener.h:
        * connectors/dds4ccm/impl/dds/DomainParticipant.h:
        * connectors/dds4ccm/impl/dds/DomainParticipantFactory.h: