@@ -1,3 +1,9 @@
+Fri Mar  5 16:35:58 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl_T.cpp:
+
+          improved error reporting, fixes for compile errors/warnings.
+        
 Fri Mar  5 15:18:50 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tests/CoherentUpdater/Base/CoherentUpdate_Test_Base.idl:
